--- a/requirements.txt
+++ b/requirements.txt
@@ -36,5 +36,5 @@ requests==2.6.0
 #SOAPpy==0.12.22
 #urllib3==1.9.1
 #virtualenv==15.1.0
-Werkzeug==0.11.10
-wstools==0.4.5
+#Werkzeug==0.11.10
+#wstools==0.4.5
